[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres"] }
actix-web = "4.4.0"
actix = "0.13.1"
dotenvy = "0.15.7"